k8s/backend-simple-auth.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-server-auth
  namespace: rancher-questions-gen
  labels:
    app: rancher-questions-generator-backend
spec:
  containers:
  - name: backend
    image: golang:1.21-alpine
    command: ["sh"]
    args: ["-c", "sleep 3600"]
    ports:
    - containerPort: 8080
