k8s/frontend-simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-simple
  namespace: rancher-questions-gen
  labels:
    app: frontend
spec:
  containers:
  - name: nginx
    image: docker.io/nginx:alpine
    ports:
    - containerPort: 80
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
    - name: nginx-config
      mountPath: /etc/nginx/conf.d/default.conf
      subPath: default.conf
  volumes:
  - name: html
    emptyDir: {}
  - name: nginx-config
    configMap:
      name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: rancher-questions-gen
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
