k8s/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher-questions-loadbalancer
  namespace: rancher-questions-gen
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
